<resources>
    <string name="app_name">SuitCase</string>
    <string name="intro_first_line">The Easy shopping solution</string>
    <string name="intro_second_line">Shop with ease and style</string>
    <string name="btn_login">User Login here</string>
    <string name="btn_user_signup">New User? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up_with">OR</string>
    <string name="user_login">USER LOGIN</string>
    <string name="Register">SignUp</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="agree_terms">I agree to the terms and conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>