<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/screenbg">

    <!-- Shop Logo -->
    <ImageView
        android:layout_width="255dp"
        android:layout_height="172dp"
        android:src="@drawable/shop_logo"
        android:layout_gravity="center"/>


    <!-- Register Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="40sp"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/colorDarkRed"
        android:textStyle="bold"
        android:textSize="22sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <!-- First Name -->
        <EditText
            android:id="@+id/userFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/colorRed"
            android:textColorHint="@color/colorDarkRed"
            android:textSize="18sp" />

    <!-- Last Name -->
        <EditText
            android:id="@+id/userLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/colorRed"
            android:textColorHint="@color/colorDarkRed"
            android:textSize="18sp" />

    </LinearLayout>


    <!-- Email -->
    <EditText
        android:id="@+id/userEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/colorRed"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="18sp" />

    <!-- Password -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorRed"
            android:textColorHint="@color/colorDarkRed"
            android:textSize="18sp" />

    <!-- Confirm Password -->
        <EditText
            android:id="@+id/userConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorRed"
            android:textColorHint="@color/colorDarkRed"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Contact Number -->
    <EditText
        android:id="@+id/userContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/colorRed"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="18sp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/colorwhite"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:textSize="19sp"
        android:background="@drawable/btnloginbg"/>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />


    <!-- Already have an account? -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textViewAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="Already have an account? "
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textViewAlreadyHaveAccount"
            android:text="Login"
            android:textColor="@color/colorAccent"
            android:clickable="true"
            android:onClick="goToLogin"
            android:padding="10dp"
            style="@style/LoginLinkStyle"
            android:background="?android:attr/selectableItemBackground" />


        </LinearLayout>







</LinearLayout>