<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screenbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="255dp"
            android:layout_height="205dp"
            android:layout_gravity="center"
            android:layout_marginTop="80sp"
            android:src="@drawable/shop_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/user_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColorHint="@color/colorDarkRed"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userPasswordWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorDarkRed"
                android:textSize="18sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/userLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_login"
            android:background="@drawable/btnloginbg"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            />

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <!-- Google Sign-In button -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:buttonSize="wide"
            app:colorScheme="light"/>

        <!-- "Do not have an account? Sign Up" text -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textViewSignUpPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do not have an account? "
                android:textColor="@android:color/black"
                android:clickable="true"
                android:onClick="goToSignUp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSignUp"
                android:text="Sign Up"
                android:textColor="@color/colorRed"
                android:clickable="true"
                android:onClick="goToSignUp"
                android:layout_toEndOf="@id/textViewSignUpPrefix" />

        </RelativeLayout>



    </LinearLayout>


</LinearLayout>